--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="registro-login.css">
+    <link rel="stylesheet" href="../static/registro-login.css">
 </head>
 <body>
     <div class="registro">
