Cambio a login no funciona

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,9 @@
         <p>Utiliza la barra de herramientas superior para navegar.</p>
         <nav>
             <ul>
-                <li><a href="coloca aqui la ruta de servicios">Servicios</a></li>
-                <li><a href="ruta de tiendas">Tiendas</a></li>
-                <li><a href="ruta de login">Iniciar sesion</a></li>
+                <li><a href="catalogo.html">Servicios</a></li>
+                <li><a href="catalogo.html">Tiendas</a></li>
+                <li><a href="login.html">Iniciar sesion</a></li>
             </ul>
         </nav>
         
