--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="../static/registro-login.css">
+    <link rel="stylesheet" href="registro-login.css">
 </head>
 <body>
     <div class="registro">
@@ -14,7 +14,7 @@
         <input type="email" id="correo" placeholder="correo electronico" required> <br>
         <input type="password" id="contraseña" placeholder="contraseña" required> <br>
 
-        <input class="login"  type="button" id="login" value="Iniciar Sesion" required>
+        <button class="login" id="login">Iniciar sesion</button>
     </div>
     <br>
     <a href="registro.html">No tienes una cuenta?</a>
