--- a/templates/registro.html
+++ b/templates/registro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <link rel= "stylesheet" href="../static/registro-login.css">
+    <link rel= "stylesheet" href="registro-login.css">
 </head>
 <body>
     <div class="registro">
@@ -24,7 +24,7 @@
             <option value="mujer">Mujer</option>
         </select> <br>
 
-        <input class="register"  type="button" id="registro" value="Registro" required>
+        <button class="register" id="registro">Registro</button>
     </div>
     <br>
     <a href="login.html">Ya tienes una cuenta?</a>
