--- a/static/registro-login.css
+++ b/static/registro-login.css
@@ -47,10 +47,15 @@ option{
 
 }
 .register{
+    display: block;
     cursor: pointer;
-    width: 100%;
-    background-color: #69B5B0 ;
+    width: 250px;
+    background-color: #69B5B0;
     transition: all .3s ease;
+    border: 2px solid black;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 0 auto; 
 }
 .register:hover{
     background-color: #579591 ;
@@ -58,11 +63,16 @@ option{
 }
 
 
-.login{
+.login {
+    display: block;
     cursor: pointer;
-    width: 100%;
-    background-color: #69B5B0 ;
+    width: 250px;
+    background-color: #69B5B0;
     transition: all .3s ease;
+    border: 2px solid black;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 0 auto; 
 }
 .login:hover{
     background-color: #579591 ;
@@ -79,7 +89,6 @@ input{
 a{
     display:inline;
     cursor: pointer;
-    text-align: right;
     margin-top: 10px;  
     color: #EBEBEB;
     text-decoration: none;
