--- a/templates/registro.html
+++ b/templates/registro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <link rel= "stylesheet" href="../static/registro-login.css">
+    <link rel= "stylesheet" href="registro-login.css">
 </head>
 <body>
     <div class="registro">
@@ -14,7 +14,6 @@
         <input type="text" id="nombreusuario" placeholder="Nombre y Apellido" required> <br>
         <input type="email" id="correo" placeholder="correo electronico" required> <br>
         <input type="password" id="contraseña" placeholder="contraseña" required> <br>
-        <input class="boton" type="date" id="edad" placeholder="Edad" required> <br>
 
 
         <select class="genero" id="genero" name ="genero" required>
