--- a/templates/registro.html
+++ b/templates/registro.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <link rel= "stylesheet" href="../static/registro-login.css">
+    <link rel= "stylesheet" href="registro-login.css">
+    
 </head>
 <body>
     <div class="registro">
         <h1>REGISTRO</h1>
-    <div class="formulario">
-        
+    <div >
+
+        <form class="formulario" action="login.html" id="formulario" method="post">
+
         <input type="text" id="nombreusuario" placeholder="Nombre y Apellido" required> <br>
         <input type="email" id="correo" placeholder="correo electronico" required> <br>
         <input type="password" id="contraseña" placeholder="contraseña" required> <br>
@@ -23,10 +26,13 @@
             <option value="mujer">Mujer</option>
         </select> <br>
 
-        <button class="register" id="registro">Registro</button>
+        <button class="register" type="submit" id="registro">Registro</button>
+        <script src="registro.js" defer></script>
+        </form>
     </div>
     <br>
     <a href="login.html">Ya tienes una cuenta?</a>
     </div>
+    
 </body>
 </html>
