--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
         <p>buuuuueeeenas</p>
         <b>¡NEGROOOO!</b>
         <i>¡italianini!</i>
+        <p>Estas loggeado como: {{usuario}}</p>
 
         <p>Esta es una página de inicio de ejemplo.</p>
         <p>Utiliza la barra de herramientas superior para navegar.</p>
