solución error al cargar archivo js

--- a/templates/cargaServicio.html
+++ b/templates/cargaServicio.html
@@ -46,6 +46,6 @@
 </section>
 
 
-  <script src="../static/script.js"></script>
+  <script src="../static/cargaServicio.js"></script>
 </body>
 </html>
