me esta obligando a hacer push antes de actualizar
ya estoy avanzando en la UI pero no me deja hacer pull de los cambios hasta no subir los mios

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,25 +3,30 @@
 <html>
     <head>
         <title>NAME_HEREEEE</title>
+        <link rel="stylesheet" type="text/css" href="../static/main_page.css">
     </head>
-
     <body>
-        <h1>Bienvenid@ a ingresa nombre aqui porfa</h1>
-        <h2> aaaAAaa </h2>
-        <p>buuuuueeeenas</p>
-        <b>¡NEGROOOO!</b>
-        <i>¡italianini!</i>
-
-        <p>Esta es una página de inicio de ejemplo.</p>
-        <p>Utiliza la barra de herramientas superior para navegar.</p>
-        <nav>
+        <header>
+            <nav>
             <ul>
-                <li><a href="catalogo.html">Servicios</a></li>
-                <li><a href="catalogo.html">Tiendas</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="coloca aqui la ruta de servicios">Servicios</a></li>
+                <li><a href="ruta de tiendas">Tiendas</a></li>
                 <li><a href="login.html">Iniciar sesion</a></li>
             </ul>
         </nav>
-        
+        </header>
+        <center>
+            <h1>Bienvenid@ a NAME_HERE</h1>
+        </center>
+        <h2>El lugar donde encontrar cualquier servicio local!</h2>
+        <p>Bienvenid@ a <b>NAME_HERE</b> el sitio ideal para dar a conocer tus servicios para la comunidad
+        local, desde limpiezas de hogares, cualquier tipo de mantenimiento, asesoramiento en proyectos, tratamientos
+    y consultas todo eso y muchos mas servicios puedes encontrarlos aqui. <br></p>
+
+        <p>Si buscas un servicio en especifico busca en la barra de servicios o tiendas para indagar en lo que necesites<br></p>
+        <p>Si estas interesado en formar parte de nuestra lista de tiendas puedes aplicar 
+            completamente <i>GRATIS</i> luego de crear tu cuenta e iniciar sesion.</p>
         <footer>
             <p>&copy; 2025 MVP's. All rights reserved.</p>
         </footer>
