--- a/static/main_page.css
+++ b/static/main_page.css
@@ -8,30 +8,52 @@ header {
     justify-content: flex-end;
     background-color: #2c2628;
 }
+
 body {
-    justify-content: center;
     height: 100vh;
-    
     background-color: #161314;
     color: #EBEBEB;
+    margin: 0;
+}
+
+#intro_container {
+    display: inline-block;
+}
+
+#intro_image{
+    padding: 30px;
+    float: left;
+}
+
+nav ul {
+    width: 100%;
+    padding: 0;
 }
 
 a:hover{
     color: blue;
 }
 
-nav ul li {
+nav li {
     list-style-type: none;
     display: inline;
-    justify-content: flex-end;
-    margin-right: 20px;
+    margin-right: 60px;
     font-size: 16px;
 }
 nav li:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
+    cursor: pointer;
 }
 
 nav a {
     text-decoration: none;
     color: #EBEBEB;
+}
+
+footer{
+    background-color: #2c2628;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding-left: 10px;
 }
