--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,9 @@
-<!-- Pagina de inicion con barra de herramientas superior-->>
+<!-- Pagina de inicion con barra de herramientas superior-->
 <!DOCTYPE html>
 <html>
     <head>
         <title>NAME_HEREEEE</title>
+        <link rel ="icon" href = "../static/images/KCC_Ball_Kirby_Artwork.ico" type = "image/x-icon">
         <link rel="stylesheet" type="text/css" href="../static/main_page.css">
     </head>
     <body>
@@ -20,25 +21,34 @@
         <center>
             <h1>Bienvenid@ a NAME_HERE</h1>
         </center>
-
-        <h2>El lugar donde encontrar cualquier servicio local!</h2>
+        <div id = "intro-container">
+            <div id = "intro_image">
+            <img src="../static/images/main_page_holder.jpeg" alt="aqui va una imagen gente">
+        </div>
+        <div id = "intro_text">
+            <h2>El lugar donde encontrar cualquier servicio local!</h2>
         <p>Bienvenid@ a <b>NAME_HERE</b> el sitio ideal para dar a conocer tus servicios para la comunidad
         local, desde limpiezas de hogares, cualquier tipo de mantenimiento, asesoramiento en proyectos, tratamientos
-    y consultas todo eso y muchos mas servicios puedes encontrarlos aqui. <br></p>
+        y consultas todo eso y muchos mas servicios puedes encontrarlos aqui. <br></p>
 
         <p>Si buscas un servicio en especifico busca en la barra de servicios o tiendas para indagar en lo que necesites<br></p>
         <p>Si estas interesado en formar parte de nuestra lista de tiendas puedes aplicar 
             completamente <i>GRATIS</i> luego de crear tu cuenta e iniciar sesion.</p>
-        <footer>
-            <p>&copy; 2025 MVP's. All rights reserved.</p>
-        </footer>
+        </div>
+        </div>
         
+        
+
         <!-- DESDE AQUI ES BORRABLE-->
         <p>texto de debug:</p>
         <p>Estas loggeado como: {{usuario}}</p>
         <p>Esta es una página de inicio de ejemplo.</p>
         <p>Utiliza la barra de herramientas superior para navegar.</p>
         <!-- HASTA AQUI ES BORRABLE-->
+
+        <footer>
+            <p>&copy; 2025 MVP's. All rights reserved.</p>
+        </footer>
     </body>
         
 </html>
