titulo de servicio más grande

--- a/templates/cargaServicio.html
+++ b/templates/cargaServicio.html
@@ -32,7 +32,7 @@
   <label class="switch-label">
     <input type="checkbox" id="service-delivery">
     <span class="switch-slider"></span>
-    <span class="switch-text">¿Es a domicilio?</span>
+    <span class="switch-text">Servicio a domicilio</span>
   </label>
 </div>
 
