barras de navegacion

--- a/templates/cargaServicio.html
+++ b/templates/cargaServicio.html
@@ -4,11 +4,23 @@
   <meta charset="UTF-8">
   <title>Servicios de la Tienda</title>
   <link rel="stylesheet" href="../static/cargServ.css">
+  <link rel="stylesheet" type="text/css" href="../static/global.css">
 </head>
+
+<!--Barra de navegacion--> 
+    <header>
+        <nav class="navbar">
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="catalogo.html">Servicios</a></li>
+                <li><a href="ruta de tiendas">Tiendas</a></li>
+                <li><a href="login.html">Iniciar sesion</a></li>
+            </ul>
+        </nav>
+    </header>
+
 <body>
-  <header>
     <h1>SERVICIOS</h1>
-  </header>
 
   <section id="add-service">
   <h2>Agregar nuevo servicio</h2>
