--- a/templates/catalogo.html
+++ b/templates/catalogo.html
@@ -2,7 +2,21 @@
     <head>
         <title>Catalogo</title>
         <link rel="stylesheet" type="text/css" href="../static/catalogo.css">
+        <link rel="stylesheet" type="text/css" href="../static/global.css">
     </head>
+
+    <!--Barra de navegacion-->
+    <header>
+        <nav class="navbar">
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="catalogo.html">Servicios</a></li>
+                <li><a href="ruta de tiendas">Tiendas</a></li>
+                <li><a href="login.html">Iniciar sesion</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <body>
         <div class="container">
             <h1>SERVICIOS</h1>
