cambios de titulo en la pagina principal

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
         <img id = "intro_image" src="../static/images/main_page_holder.jpeg" alt="aqui va una imagen gente">
             
         <h2>El lugar donde encontrar cualquier servicio local!</h2>
-        <p>Bienvenid@ a <b>NAME_HERE</b> el sitio ideal para dar a conocer tus servicios para la comunidad
+        <p>Te damos la bienvenida a <b>NAME_HERE</b> el sitio ideal para dar a conocer tus servicios para la comunidad
         local, desde limpiezas de hogares, cualquier tipo de mantenimiento, asesoramiento en proyectos, tratamientos
         y consultas todo eso y muchos mas servicios puedes encontrarlos aqui. <br></p>
 
