--- a/templates/index.html
+++ b/templates/index.html
@@ -24,12 +24,12 @@
     <body>
         
         <center>
-            <h1>Bienvenid@ a NAME_HERE</h1>
+            <h1>Te Damos la Bienvenida a NAME_HERE</h1>
         </center>
         <img id = "intro_image" src="../static/images/main_page_holder.jpeg" alt="aqui va una imagen gente">
             
         <h2>El lugar donde encontrar cualquier servicio local!</h2>
-        <p>Te damos la bienvenida a <b>NAME_HERE</b> el sitio ideal para dar a conocer tus servicios para la comunidad
+        <p><b>NAME_HERE</b> es el sitio ideal para dar a conocer tus servicios para la comunidad
         local, desde limpiezas de hogares, cualquier tipo de mantenimiento, asesoramiento en proyectos, tratamientos
         y consultas todo eso y muchos mas servicios puedes encontrarlos aqui. <br></p>
 
