--- a/static/catalogo.css
+++ b/static/catalogo.css
@@ -24,7 +24,7 @@
     width: 130px;
     height: 130px;
     border-radius: 20px;
-    box-shadow: 0 0 10px #000000;
+    box-shadow: 0 0 10px #161314;
   }
 }
 
@@ -32,14 +32,14 @@
     display:flex;
     flex-direction: column;
     text-align: center;
-    border: 2px solid black;
+    border: 2px solid #161314;
     border-radius: 20px;
     padding: 80px;
     padding-top: 30px;
     padding-bottom: 30px;
     background-color: #2C2628 ;
     color: #EBEBEB;
-    box-shadow: 0 0 10px #ffffff;
+    box-shadow: 0 0 10px #EBEBEB;
     margin: 30px;
     margin-top: 0px;
 }
@@ -51,7 +51,7 @@
 }
 
 input{
-    border: 2px solid black;
+    border: 2px solid #161314;
     border-radius: 5px;
     padding: 10px;
     width: 250px;
