cambiar Bs por $

--- a/templates/cargaServicio.html
+++ b/templates/cargaServicio.html
@@ -29,7 +29,7 @@
       <textarea id="service-description" name="service-description" placeholder="Descripción detallada" required></textarea>
 
       <div class="horizontal-group">
-        <input type="number" id="service-price" name="service-price" placeholder="Precio por hora (Bs)" required>
+        <input type="number" id="service-price" name="service-price" placeholder="Precio por hora ($)" required>
         <select id="service-category" name="service-category" required>
           <option value="" disabled selected>Categoría</option>
           <option value="Medicina">Medicina</option>
