--- a/templates/catalogo.html
+++ b/templates/catalogo.html
@@ -19,10 +19,10 @@
 
     <body>
         <div class="container">
-            <h1>SERVICIOS</h1>
+            <h1 class = "FadeLeft">SERVICIOS</h1>
             <div class="lista-servicios">
                 {% for servicio in servicios %}
-                    <div class="servicio">
+                    <div class="servicio FadeUp">
                         <div class="servicio-titulo">
                             <div>
                                 <h2>{{ servicio['titulo'] }}</h2>
