--- a/templates/login.html
+++ b/templates/login.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="../static/registro-login.css">
+    <link rel="stylesheet" href="../static/global.css">
 </head>
 <body>
     <div class="registro">
-        <h1>INICIAR SESION</h1>
-    <form class="formulario" action="/login.html" id="formulario" method="post">
+        <h1 class = "FadeDown">INICIAR SESION</h1>
+    <form class="FadeIn" action="/login.html" id="formulario" method="post">
         
         <input type="email" name="correo" id="correo" placeholder="correo electronico" required> <br>
         <input type="password" name="contraseña" id="contraseña" placeholder="contraseña" required> <br>
