--- a/templates/registro.html
+++ b/templates/registro.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
+    <link rel="stylesheet" type="text/css" href="../static/global.css">
     <link rel= "stylesheet" href="../static/registro-login.css">
     
 </head>
 <body>
     <div class="registro">
-        <h1>REGISTRO</h1>
+        <h1 class="FadeDown">REGISTRO</h1>
     <div >
 
-        <form class="formulario" action="/registro.html" id="formulario" method="post">
+        <form class="FadeIn" action="/registro.html" id="formulario" method="post">
 
         <input type="text" name="nombreusuario" id="nombreusuario" placeholder="Nombre y Apellido" required> <br>
         <input type="email" name="correo" id="correo" placeholder="correo electronico" required> <br>
