--- a/static/registro-login.css
+++ b/static/registro-login.css
@@ -25,7 +25,7 @@ body {
     padding-bottom: 50px;
     background-color: #2C2628 ;
     color: #EBEBEB;
-    box-shadow: 0 0 10px #EBEBEB;
+    box-shadow: 0 0 10px #17599f;
 }
 
 .genero{
