--- a/templates/cargaServicio.html
+++ b/templates/cargaServicio.html
@@ -20,10 +20,10 @@
     </header>
 
 <body>
-    <h1>SERVICIOS</h1>
+    <h1 class = "FadeDown">SERVICIOS</h1>
 
-  <section id="add-service">
-    <h2>Agregar nuevo servicio</h2>
+  <section class = "FadeIn" id="add-service">
+    <h2 class = "FadeLeft">Agregar nuevo servicio</h2>
     <form id="service-form" enctype="multipart/form-data">
       <input type="text" id="service-title" name="service-title" placeholder="Título del servicio" required>
       <textarea id="service-description" name="service-description" placeholder="Descripción detallada" required></textarea>
@@ -60,7 +60,7 @@
     </form>
   </section>
 
-  <section id="service-list">
+  <section class="FadeUp" id="service-list">
     <h2>Servicios disponibles</h2>
     <ul id="services"></ul>
   </section>
