--- a/templates/catalogo.html
+++ b/templates/catalogo.html
@@ -10,7 +10,7 @@
         <nav class="navbar">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="catalogo.html">Servicios</a></li>
+                <li><a style = "color: #69B5B0;" href="catalogo.html">Servicios</a></li>
                 <li><a href="ruta de tiendas">Tiendas</a></li>
                 <li><a href="login.html">Iniciar sesion</a></li>
             </ul>
