--- a/static/catalogo.css
+++ b/static/catalogo.css
@@ -8,7 +8,7 @@
     }
 
 .lista-servicios {
-  width: 80vw;
+  width: 95vw;
   display:grid;
   grid-template-columns: 50% 50%;
   grid-row: auto auto;
@@ -17,13 +17,14 @@
 
 .servicio-titulo {
   display:grid;
-  grid-template-columns: 65% 30%;
+  grid-template-columns: 60% 30%;
   grid-column-gap: 10%;
   grid-row: auto auto;
   img {
-    width: 130px;
-    height: 130px;
+    width: 150px;
+    height: 100px;
     border-radius: 20px;
+    object-fit: cover;
     box-shadow: 0 0 10px #161314;
   }
 }
@@ -34,7 +35,7 @@
     text-align: center;
     border: 2px solid #161314;
     border-radius: 20px;
-    padding: 80px;
+    padding: 20px;
     padding-top: 30px;
     padding-bottom: 30px;
     background-color: #2C2628 ;
