Backend servicios, eliminar, editar, agregar, etc.

--- a/templates/cargaServicio.html
+++ b/templates/cargaServicio.html
@@ -50,7 +50,7 @@
       </div>
 
       <label for="imagen">Selecciona una imagen:</label>
-      <input type="file" id="imagen" name="imagen" accept="image/*" required>
+      <input type="file" id="imagen" name="imagen" accept="image/*">
 
       <div id="preview-box">
         <img id="img-preview" src="#" alt="Vista previa" style="display: none;" />
