--- a/static/catalogo.css
+++ b/static/catalogo.css
@@ -1,10 +1,8 @@
-
 .container {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      width: 100%;
     }
 
 .lista-servicios {
@@ -65,4 +63,12 @@ a{
     margin-top: 10px;  
     color: #EBEBEB;
     text-decoration: none;
+}
+
+@media only screen and (max-width: 768px){
+  .lista-servicios {
+    width: 95vw;
+    display:grid;
+    grid-template-columns: 100%;
+  }
 }
