--- a/static/servicios.css
+++ b/static/servicios.css
@@ -19,4 +19,11 @@
     display: block;
     text-align:center;
 }
+img {
+    width: 150px;
+    height: 100px;
+    border-radius: 20px;
+    object-fit: cover;
+    box-shadow: 0 0 10px #161314;
+}
 
