--- a/templates/servicios.html
+++ b/templates/servicios.html
@@ -22,7 +22,7 @@
     <div class="container">
         <h1>{{servicio['titulo']}}</h1>
         <div class="descripcion-servicio"> 
-            <img class="servicio-imagen" src="{{ servicio['imagen'] }}" alt="Imagen del servicio">
+            <img class="imagen" src="{{ servicio['imagen'] }}" alt="Imagen del servicio">
             <p>{{ servicio['descripcion'] }}</p>
         </div>  
        
@@ -31,8 +31,6 @@
             <input style="color: black;" type="date" id="fecha" name="fecha">
         </div>
     </div>
-
-    
     
 </body>
 </html>
