Estilo de los servicios

--- a/static/servicios.css
+++ b/static/servicios.css
@@ -19,9 +19,12 @@
     display: block;
     text-align:center;
 }
+.imagen{
+    width: 600px;;
+}
 img {
-    width: 150px;
-    height: 100px;
+    width: 100%;
+    height: auto;
     border-radius: 20px;
     object-fit: cover;
     box-shadow: 0 0 10px #161314;
