--- a/templates/servicios.html
+++ b/templates/servicios.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/servicios.css">
-    <link rel="stylesheet" href="../static/global.css">
+    <link rel="stylesheet" href="servicios.css">
+    <link rel="stylesheet" href="global.css">
     <title>Servicio</title>
 </head>
 <header>
@@ -19,18 +19,26 @@
     </header>
 <body>
     
+
     <div class="container">
         <h1>{{servicio['titulo']}}</h1>
         <div class="descripcion-servicio"> 
-            <img class="imagen" src="{{ servicio['imagen'] }}" alt="Imagen del servicio">
+            <img class="imagen" src="xd.png" alt="Imagen del servicio">
             <p>{{ servicio['descripcion'] }}</p>
         </div>  
        
         <div class="reserva">
-            <label for="fecha">Reserva un Día</label> <br>
-            <input style="color: black;" type="date" id="fecha" name="fecha">
+            <form action="#" id="reserva">
+            <label for="fecha">Reserva un Día</label> <br> <br>
+            <label for="hora">Hora</label> <br>
+            <input class="tiempo" type="time" id="hora" name="hora"> <br>
+            <label for="fecha">Fecha</label> <br>
+            <input class="tiempo" type="date" id="fecha" name="fecha"> <br>
+            <button>Reservar</button>
+            </form>
         </div>
+        
     </div>
-    
+    <script src="servicios.js"></script>
 </body>
 </html>
