--- a/templates/servicios.html
+++ b/templates/servicios.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="servicios.css">
-    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="../static/servicios.css">
+    <link rel="stylesheet" href="../static/global.css">
     <title>Servicio</title>
 </head>
 <header>
@@ -39,6 +39,6 @@
         </div>
         
     </div>
-    <script src="servicios.js"></script>
+    <script src="../static/servicios.js"></script>
 </body>
 </html>
