--- a/templates/servicios.html
+++ b/templates/servicios.html
@@ -23,7 +23,7 @@
     <div class="container">
         <h1>{{servicio['titulo']}}</h1>
         <div class="descripcion-servicio"> 
-            <img class="imagen" src="xd.png" alt="Imagen del servicio">
+            <img class="imagen" src="{{ servicio['imagen'] }}" alt="Imagen del servicio">
             <p>{{ servicio['descripcion'] }}</p>
         </div>  
        
