calendario agregado a servicios, falta añadir funciones precios

--- a/templates/servicios.html
+++ b/templates/servicios.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/servicios.css">
     <link rel="stylesheet" href="../static/global.css">
+    <link rel="stylesheet" href="../static/calendario.css">
     <title>Servicio</title>
 </head>
 <header>
@@ -35,6 +36,13 @@
             <input style="color: black;" type="date" id="fecha" name="fecha">
         </div>
     </div>
-    
+
+    <div>
+<h2>Calendario Semanal -- Bloques por Hora</h2>
+    <div class="calendar" id="calendar">
+        <!-- Contenido generado por JS -->
+    </div>
+    </div>
+    <script src="../static/calendary.js"></script>
 </body>
 </html>
