cambio de sombras blancas a azul y fix de la barra de navegacion en detalles de servicio

--- a/static/catalogo.css
+++ b/static/catalogo.css
@@ -38,7 +38,7 @@
     padding-bottom: 30px;
     background-color: #2C2628 ;
     color: #EBEBEB;
-    box-shadow: 0 0 10px #EBEBEB;
+    box-shadow: 0 0 10px #17599f;
     margin: 30px;
     margin-top: 0px;
 }
