animaciones en la descripcion de servicios

--- a/templates/calendary.html
+++ b/templates/calendary.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <title>Calendario Semanal por Horas</title>
     <link rel="stylesheet" href="../static/calendario.css">
+    <link rel="stylesheet" type="text/css" href="../static/global.css">
 </head>
 <body>
 
-    <h2>Calendario Semanal -- Bloques por Hora</h2>
-    <div class="calendar" id="calendar">
+    <h2 class="FadeIn">Calendario Semanal -- Bloques por Hora</h2>
+    <div class="calendar FadeUp" id="calendar">
         <!-- Contenido generado por JS -->
     </div>
 
