--- a/templates/servicios.html
+++ b/templates/servicios.html
@@ -11,8 +11,8 @@
 <header>
         <nav class="navbar">
             <ul>
-                <li><a href="/index.html">Inicio</a></li>
-                <li><a style = "color: #69B5B0;" href="/catalogo.html">Servicios</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="catalogo.html">Servicios</a></li>
                 <li><a href="ruta de tiendas">Tiendas</a></li>
                 {% if usuario %}
                 <li><a href="#">{{ usuario }}</a></li>
