renombrando el icono para reemplazarlo facimente, elimine una carpeta innecesaria

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>NAME_HEREEEE</title>
-        <link rel ="icon" href = "../static/images/KCC_Ball_Kirby_Artwork.ico" type = "image/x-icon">
+        <title>NAME_HERE</title>
+        <link rel ="icon" href = "../static/images/Page_icon.ico" type = "image/x-icon">
 
         <link rel="stylesheet" type="text/css" href="../static/main_page.css">
         <link rel="stylesheet" type="text/css" href="../static/global.css">
@@ -26,16 +26,15 @@
     </header>
     
     <body>
-        
         <center>
             <h1>Te Damos la Bienvenida a NAME_HERE</h1>
         </center>
         <img id = "intro_image" src="../static/images/main_page_holder.jpeg" alt="aqui va una imagen gente">
             
         <h2>El lugar donde encontrar cualquier servicio local!</h2>
-        <p><b>NAME_HERE</b> es el sitio ideal para dar a conocer tus servicios para la comunidad
-        local, desde limpiezas de hogares, cualquier tipo de mantenimiento, asesoramiento en proyectos, tratamientos
-        y consultas todo eso y muchos mas servicios puedes encontrarlos aqui. <br></p>
+        <p><b>NAME_HERE</b> es el sitio ideal para dar a conocer tus servicios para la comunidad local, 
+        desde limpiezas de hogares, cualquier tipo de mantenimiento, asesoramiento en proyectos, tratamientos
+        y consultas todo eso y muchos mas servicios puedes encontrarlos aqui. <br> </p>
 
         <p>Si buscas un servicio en especifico busca en la barra de servicios o tiendas para 
         indagar en lo que necesites<br></p>
