--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
                 <li><a href="catalogo.html">Servicios</a></li>
                 <li><a href="ruta de tiendas">Tiendas</a></li>
                 {% if usuario %}
-                <li><a href="#">{{ usuario }}</a></li>
+                <li><a href="user_page.html">{{ usuario }}</a></li>
             {% else %}
                 <li><a href="login.html">Iniciar sesión</a></li>
             {% endif %}
