--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -3,8 +3,6 @@
     <head>
         <title>NAME_HERE</title>
         <link rel ="icon" href = "../static/images/Page_icon.ico" type = "image/x-icon">
-
-        <link rel="stylesheet" type="text/css" href="../static/main_page.css">
         <link rel="stylesheet" type="text/css" href="../static/global.css">
     </head>
 
@@ -23,5 +21,9 @@
             </ul>
         </nav>
     </header>
+
+    <body>
+        <h1> UsuArio</h1>
+    </body>
 
 </html>
