--- a/templates/servicios.html
+++ b/templates/servicios.html
@@ -11,13 +11,13 @@
 <header>
         <nav class="navbar">
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="catalogo.html">Servicios</a></li>
+                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="/catalogo.html">Servicios</a></li>
                 <li><a href="ruta de tiendas">Tiendas</a></li>
                 {% if usuario %}
-                <li><a href="#">{{ usuario }}</a></li>
+                <li><a href="/user_page.html">{{ usuario }}</a></li>
             {% else %}
-                <li><a href="login.html">Iniciar sesión</a></li>
+                <li><a href="/login.html">Iniciar sesión</a></li>
             {% endif %}
             </ul>
         </nav>
