--- a/static/servicios.css
+++ b/static/servicios.css
@@ -1,31 +1,38 @@
 .container {
-    border:1px solid white;
+    border: 1px solid white;
     padding: 10px;
-    margin: 50px 20vh;
+    margin: 50px auto;
+    max-width: 90%;
     text-align: center;
-    
-
-}
-.descripcion-servicio{
-    display: inline-block;
 }
 
-.descripcion-servicio p{
-    justify-content: flex-end;
-    width: 600px;;
+.descripcion-servicio {
+    display: block;
+    margin: 0 auto;
 }
 
-.reserva{
-    display: inline-block;
-    text-align:center;
+.descripcion-servicio p {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    text-align: left;
+}
+
+.reserva {
+    display: block;
     background-color: #2c2628;
     padding: 30px;
     border-radius: 10px;
-    margin:30px;
+    margin: 30px auto;
+    max-width: 90%;
 }
-.imagen{
-    width: 600px;;
+
+.imagen {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
 }
+
 img {
     width: 100%;
     height: auto;
@@ -34,16 +41,17 @@ img {
     box-shadow: 0 0 10px #161314;
 }
 
-.tiempo{
-    width: 200px;
+.tiempo {
+    width: 100%;
+    max-width: 200px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #2c2628;
     color: #EBEBEB;
     font-size: 16px;
-    cursor:pointer;
-    margin: 5px;
+    cursor: pointer;
+    margin: 5px auto;
 }
 
 button {
@@ -54,6 +62,49 @@ button {
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
-    margin: 20px 0;
+    margin: 20px auto;
+    display: block;
 }
 
+/* Responsive adjustment for screens smaller than 768px */
+@media screen and (max-width: 768px) {
+    .descripcion-servicio p,
+    .reserva,
+    .imagen {
+        max-width: 100%;
+        margin: 0 auto;
+    }
+
+    .tiempo {
+        width: 100%;
+    }
+
+    button {
+        width: 100%;
+    }
+}
+
+
+.enviar{
+    animation: fadeIn 1s ease-in-out;
+    border: solid 1px #ccc;
+    background-color: #161314;
+    color: #EBEBEB;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.enviar:hover {
+    background-color: #2c2628;
+    color: #fff;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
