--- a/templates/catalogo.html
+++ b/templates/catalogo.html
@@ -3,6 +3,8 @@
         <title>Catalogo</title>
         <link rel="stylesheet" type="text/css" href="../static/catalogo.css">
         <link rel="stylesheet" type="text/css" href="../static/global.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        
     </head>
 
     <!--Barra de navegacion-->
