--- a/templates/registro.html
+++ b/templates/registro.html
@@ -22,7 +22,7 @@
 
         <select class="genero" id="genero" name ="genero" required>
 
-            <option value="Seleccion">Genero</option>
+            <option value=" " selected disabled>Género</option>
             <option value="hombre">Hombre</option>
             <option value="mujer">Mujer</option>
         </select> <br>
