--- a/static/registro-login.css
+++ b/static/registro-login.css
@@ -94,3 +94,8 @@ a{
     color: #EBEBEB;
     text-decoration: none;
 }
+.mensaje-error {
+  color: red;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
