Reconocer reservas propias en el calendario y permitir eliminarlas

--- a/templates/servicios.html
+++ b/templates/servicios.html
@@ -38,6 +38,7 @@
     </div>
     <button id="submit-button" class="enviar">Enviar horarios</button>
 
+    <script>window.usuarioActual = "{{ usuario }}";</script>
     <script src="../static/calendary.js"></script>
 </body>
 </html>
